public/styles/approved-discount.css
html, body {
    margin: auto;
    min-width: fit-content;
}

.header {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 70px;
    background: linear-gradient(90deg, #980B0B 0%, #DB3434 105.77%);
}

.header img {
    margin-right: 33px;
}

.buy-now-paypal {
    display: none;
}

.header-text {
    font-family: Work Sans;
    font-style: normal;
    font-size: 28px;
    line-height: 21px;
    color: #FFFFFF;
}

.header-text-bold {
    text-transform: uppercase;
    font-weight: 500;
}

.content {
    width: 100%;
    display: flex;
    align-items: center;
    flex-direction: column;
    margin-top: 65px;
    min-height: 85vh;
}

.discount-product {
    display: flex;
    align-items: center;
    width: 54%;
}

.discount-text-block {
    display: flex;
    flex-direction: column;
    margin-left: 52px;
}

.discount-text-block h1 {
    font-family: Work Sans, sans-serif;
    font-style: normal;
    font-weight: bold;
    font-size: 32px;
    line-height: 46px;
    text-transform: uppercase;
}

.discount-text-block p {
    font-family: Work Sans, sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 32px;
    line-height: 46px;
    margin-top: 0;
    margin-bottom: 0;
}

.discount-dash-wrapper {
    display: flex;
    align-items: center;
    width: 50%;
}

.discount-dash-text {
    background: #CD3535;
    border-radius: 3px;
    width: 86px;
    height: 26px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.discount-dash-text span {
    font-family: Work Sans, sans-serif;
    font-style: normal;
    font-weight: 600;
    font-size: 24px;
    line-height: 36px;
    text-transform: uppercase;
    color: #FFFFFF;
}

.discount-text {
    width: 50%;
}

.discount-text p {
    font-family: Source Sans Pro, sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 18px;
    line-height: 21px;
}

.discount-text-selected {
    background: rgba(251, 219, 133, 0.5);
    border-radius: 3px;
    padding: 3px;
}

.bold {
    font-weight: bold;
}

.retail-price {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background: rgba(205, 53, 53, 0.03);
    border-radius: 10px;
    width: 50%;
}

.retail-price-heading {
    font-family: Work Sans, sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 24px;
    line-height: 21px;
    text-align: center;
}

.retail-discount {
    background: #FFFFFF;
    border: 2px solid #CD3535;
    box-sizing: border-box;
    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
    border-radius: 10px;
    width: 55%;
}

.retail-discount h2 {
    font-family: Work Sans, sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 24px;
    line-height: 21px;
    text-align: center;
    color: #CD3535;
}

.retail-discount h1 {
    font-family: Work Sans, sans-serif;
    font-style: normal;
    font-weight: 600;
    font-size: 36px;
    line-height: 21px;
    text-align: center;
    color: #CD3535;
}

.retail-discount p {
    font-family: Source Sans Pro, sans-serif;
    font-style: normal;
    font-weight: 600;
    font-size: 18px;
    line-height: 21px;
    text-align: center;
}

.title span {
    font-family: Work Sans;
    font-style: normal;
    font-weight: normal;
    font-size: 32px;
    line-height: 21px;
}

.subtext span {
    font-family: Work Sans;
    font-style: normal;
    font-weight: 600;
    font-size: 18px;
    line-height: 21px;
    margin-top: 16px;
}

.prices {
    margin-top: 43px;
    display: flex;
    align-items: center;
}

.discounted-price span {
    font-family: Work Sans;
    font-style: normal;
    font-weight: 600;
    font-size: 42px;
    line-height: 21px;
    margin-right: 14px;
}

.original-price span {
    font-family: Work Sans;
    font-style: normal;
    font-weight: normal;
    font-size: 24px;
    line-height: 21px;
    text-decoration-line: line-through;
    color: #CD3535;
}

.discount-dash {
    width: 100%;
    height: 1px;
    background: #C4C4C4;
    opacity: 0.2;
}

.discount-footer-text {
    font-family: Work Sans;
    font-style: normal;
    font-weight: 600;
    font-size: 24px;
    line-height: 36px;
    text-transform: uppercase;
}

.discount-text-block-footer {
    margin-top: 24px;
}

.packages-left {
    background-color: #CD3535   ;
    font-family: Work Sans;
    font-style: normal;
    font-weight: 600;
    font-size: 24px;
    line-height: 36px;
    color: white;
    text-transform: uppercase;
    border-radius: 3px;
    padding-left: 10px;
    padding-right: 10px;
}

.discount-percentage {
    background-color: #FCEDC2;
    padding-left: 8px;
    padding-right: 8px;
}

.give-discount-block {
    height: 120px;
    width: 970px;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    background: linear-gradient(95.79deg, #1A2F61 0.48%, #224087 99.62%);
    border-radius: 10px;
    margin-top: 30px;
}

.give-discount-block p {
    font-family: Work Sans, sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 28px;
    line-height: 30px;
    color: #FFFFFF;
    width: 69%;
    text-align: center;
}

.underlined {
    font-family: Work Sans;
    font-style: normal;
    font-weight: 500;
    font-size: 28px;
    line-height: 21px;
    color: #FFFFFF;
    text-transform: uppercase;
    border-bottom: solid;
    border-bottom-color: #FBDB85;
    border-bottom-left-radius: 2px;
    border-bottom-right-radius: 2px;
}

.give-discount-btn {
    width: 55%;
    height: 62px;
    background: #CD3535;
    border-radius: 10px;
    border-style: outset;
    cursor: pointer;
    margin-top: 30px;
    border: 0;
    margin-bottom: 55px;
}

.give-discount-btn span {
    font-family: Work Sans;
    font-style: normal;
    font-weight: bold;
    font-size: 24px;
    line-height: 21px;
    text-transform: uppercase;
    color: #FFFFFF;
}

.give-discount-bottom-text {
    margin-top: 28px;
    margin-bottom: 30px;
}

.give-discount-bottom-text span {
    font-family: Work Sans;
    font-style: normal;
    font-weight: normal;
    font-size: 15px;
    line-height: 24px;
    text-decoration-line: underline;
    color: #000000;
    cursor: pointer;
}

.statement-block {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 970px;
    height: 110px;
    background: #FAFBFF;
    border-radius: 10px;
}

.statement-block span {
    margin-top: 18px;
    margin-bottom: 29px;
    margin-left: 31px;
    margin-right: 32px;
    font-family: Work Sans;
    font-style: normal;
    font-weight: normal;
    font-size: 15px;
    line-height: 24px;
    color: #000000;
    text-align: center;
}

.footer {
    display: flex;
    justify-content: space-around;
    align-items: center;
    margin: auto;
    background: #FFFFFF;
    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.05);
    height: 78px;
    margin-top: 14px;
    /* position: fixed;
    width: 100%;
    bottom: 0;
    left: 0; */
}

.dmca-protected img {
    width: 150px;
    height: 30px;
}

.footer-links {
    width: 324px;
    display: flex;
    justify-content: space-around;
    margin-bottom: 0;
}

.footer-link-item a {
    font-family: Work Sans;
    font-style: normal;
    font-weight: 500;
    font-size: 15px;
    line-height: 24px;
    text-decoration-line: underline;
    color: #000000;
}

.reserved span {
    font-family: Work Sans;
    font-style: normal;
    font-weight: normal;
    font-size: 15px;
    line-height: 24px;
    color: #000000;
}

@media screen and (max-width: 768px) {
    .header img {
        margin-left: 32px;
    }
    .header span {
        font-family: Work Sans;
        font-style: normal;
        font-weight: 500;
        font-size: 16px;
        line-height: 21px;
        color: #FFFFFF;
        margin-right: 36px;
    }
    .title span {
        display: none;
    }
    .discount-product {
        display: flex;
        flex-direction: column;

    }
    .prices {
        display: flex;
        flex-direction: column;
    }
    .product-img-block {
        text-align: center;
    }
    .discount-text-block {
        margin-left: 0;
    }
    .discount-dash {
        width: 90%;
    }
    .subtext {
        text-align: center;
    }
    .discount-text-block-footer {
        text-align: center;
    }
    .give-discount-block {
        border-radius: 0px;
    }
    .give-discount-block {
        width: 100%;
        text-align: center;
    }
    .give-discount-block span {
        font-family: Work Sans;
        font-style: normal;
        font-weight: 500;
        font-size: 24px;
        line-height: 26px;
        color: #FFFFFF;
        flex-direction: column;
    }
    .give-discount-btn {
        width: auto;
    }


    .give-discount-bottom-text {
        width: 320px;
        display: flex;
        text-align: center;
    }
    .statement-block {
        width: auto;
        height: auto;
        padding: 5px;
    }
    .statement-block span {
        margin: 0;
    }
    .footer {
        /* width: 320px; */
        height: 200px;
    }
    .footer-links {
        width: auto;
        align-items: center;
        flex-direction: column;
    }
}

@media screen and (max-width: 560px) {
    .footer {
        flex-direction: column-reverse;
    }
}

@media screen and (max-width: 475px) {
    .retail-discount {
        width: auto;
    }

    .give-discount-block {
        height: auto;
    }

    .retail-price {
        width: 90%;
    }

    .discount-text {
        width: 80%;
    }

    .discount-dash-wrapper {
        width: 80%;
    }

    .product-img-block img {
        width: 320px;
    }

    .discount-text-block {
        width: 90%;
        text-align: center;
    }
}

